--- a/css/slog.css
+++ b/css/slog.css
@@ -3,7 +3,7 @@ background-color:#ffffff
 }
 
 /* Pisava, velikost in barva naslovov */
-body{ font-family: 'Oswald', sans-serif;}
+body{ font-family: 'Oswald', 'Tahoma', sans-serif;}
 h1 { color: #D65039 }
 h2 { color: #D65039; font-size: 1.5em; font-weight: bold }
 h3 { color: rgba(85,61,123,0.80); font-size: 2em }
@@ -297,3 +297,8 @@ h4{
   }
 }
 
+@media (min-width: 768px) and (max-width: 1000px) {
+   .collapse {
+       display: none !important;
+   }
+}
